--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ grailsVersion=2024.0.0-M4
 groovyVersion=4.0.15
 liquibaseVersion=4.19.0
 liquibaseHibernateVersion=4.19.0
-projectVersion=7.0.0-SNAPSHOT
+projectVersion=7.0.0-M1
 
 websiteUrl=https://grails-plugins.github.io/grails-database-migration
 issueTrackerUrl=https://github.com/grails-plugins/grails-database-migration/issues
